--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -3,13 +3,11 @@
     x:Class="MAUIRecipeApp.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:Auth="clr-namespace:MAUIRecipeApp.View.Auth"
     xmlns:local="clr-namespace:MAUIRecipeApp"
-    Shell.FlyoutBehavior="Disabled"
-    Title="MAUIRecipeApp">
+    Title="MAUIRecipeApp"
+    Shell.FlyoutBehavior="Disabled">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <ShellContent ContentTemplate="{DataTemplate Auth:SignUpPageView}" Route="join" />
 
 </Shell>
