--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -4,10 +4,11 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:Auth="clr-namespace:MAUIRecipeApp.View.Auth"
+    xmlns:View="clr-namespace:MAUIRecipeApp.View"
     xmlns:local="clr-namespace:MAUIRecipeApp"
     Title="MAUIRecipeApp"
     Shell.FlyoutBehavior="Disabled">
 
-    <ShellContent ContentTemplate="{DataTemplate Auth:SignUpPageView}" Route="join" />
+    <ShellContent ContentTemplate="{DataTemplate View:StartUpPageView }" Route="join" />
 
 </Shell>
