Refactor views and viewmodels; update routing and services
Updated AppShell.xaml to change StartUpPageView route from "join" to "startup". Removed ViewModel\Auth folder from MAUIRecipeApp.csproj. Added namespaces MAUIRecipeApp.View.Auth and MAUIRecipeApp.ViewModel.Auth in MauiProgram.cs. Changed services for StartUpPageView and StartUpPageViewModel to transient. Added transient services for LoginPageView, LoginPageViewModel, SignUpPageView, and SignUpPageViewModel.

Updated LoginPageView.xaml to include viewmodel namespace, set x:DataType to LoginPageViewModel, and added ScrollView for centering content. Modified LoginPageView.xaml.cs constructor to accept LoginPageViewModel parameter and set it as BindingContext. Updated SignUpPageView.xaml to include viewmodel namespace and set x:DataType to SignUpPageViewModel.

Created LoginPageViewModel.cs and SignUpPageViewModel.cs, defining classes that inherit from ObservableObject.

--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -10,7 +10,7 @@
     Title="MAUIRecipeApp"
     Shell.FlyoutBehavior="Disabled">
 
-    <ShellContent ContentTemplate="{DataTemplate View:StartUpPageView}" Route="join" />
+    <ShellContent ContentTemplate="{DataTemplate View:StartUpPageView}" Route="startup" />
     <ShellContent ContentTemplate="{DataTemplate Auth:LoginPageView}" Route="login" />
     <ShellContent ContentTemplate="{DataTemplate Auth:SignUpPageView}" Route="signup" />
 
