--- a/View/Auth/LoginPageView.xaml
+++ b/View/Auth/LoginPageView.xaml
@@ -7,8 +7,11 @@
     xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
     xmlns:mi="http://www.aathifmahir.com/dotnet/2022/maui/icons"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+    xmlns:viewmodel="clr-namespace:MAUIRecipeApp.ViewModel.Auth"
     Title=""
+    x:DataType="viewmodel:LoginPageViewModel"
     Background="{StaticResource WhiteText}">
+
     <ScrollView HorizontalOptions="Center" VerticalOptions="Center">
 
         <VerticalStackLayout
