--- a/View/Auth/SignUpPageView.xaml
+++ b/View/Auth/SignUpPageView.xaml
@@ -6,7 +6,9 @@
     xmlns:m="clr-namespace:UraniumUI.Icons.MaterialSymbols;assembly=UraniumUI.Icons.MaterialSymbols"
     xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+    xmlns:viewmodel="clr-namespace:MAUIRecipeApp.ViewModel.Auth"
     Title=""
+    x:DataType="viewmodel:SignUpPageViewModel"
     Background="{StaticResource WhiteText}">
     <ScrollView>
         <VerticalStackLayout
