--- a/View/Auth/PasswordVerifyCodePageView.xaml
+++ b/View/Auth/PasswordVerifyCodePageView.xaml
@@ -1,49 +1,63 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
-    x:Class="MAUIRecipeApp.View.Auth.PasswordRecoveryPageView"
+    x:Class="MAUIRecipeApp.View.Auth.PasswordVerifyCodePageView"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:m="clr-namespace:UraniumUI.Icons.MaterialSymbols;assembly=UraniumUI.Icons.MaterialSymbols"
     xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-    xmlns:viewmodel="clr-namespace:MAUIRecipeApp.ViewModel.Auth"
     Title=""
-    x:DataType="viewmodel:PasswordRecoveryPageViewModel"
     Background="{StaticResource WhiteText}">
     <ScrollView>
         <VerticalStackLayout
-            Margin="16,16,16,0"
+            Margin="{OnPlatform Android=16,
+                                WinUI=0}"
             HorizontalOptions="{OnPlatform Android=Fill,
                                            WinUI=Center}"
-            Spacing="8">
+            Spacing="12">
             <Label
+                FontAttributes="Bold"
                 FontSize="35"
                 HorizontalOptions="Center"
-                Text="Password recovery"
+                Text="Check your email"
                 TextColor="{StaticResource PrimaryDarkText}" />
             <Label
-                FontSize="18"
+                FontSize="20"
                 HorizontalOptions="Center"
-                Text="Enter your email to recover your password"
-                TextColor="{StaticResource Gray300}" />
+                Text="We've sent the code to your email"
+                TextColor="{StaticResource PrimaryDarkText}" />
             <material:TextField
-                Title="Email"
-                Margin="0,16,0,0"
+                Title="Code"
+                Margin="0,12,0,0"
                 AllowClear="True"
                 FontSize="20"
+                Keyboard="Numeric"
                 TextColor="{StaticResource PrimaryDarkText}">
                 <material:TextField.Icon>
-                    <FontImageSource FontFamily="MaterialSharp" Glyph="{x:Static m:MaterialSharp.Mail}" />
+                    <FontImageSource FontFamily="MaterialSharp" Glyph="{x:Static m:MaterialSharp.Pin}" />
                 </material:TextField.Icon>
             </material:TextField>
 
+            <HorizontalStackLayout
+                Margin="0,12,0,0"
+                HorizontalOptions="Center"
+                Spacing="8">
+                <Label Text="code expires in: " TextColor="{StaticResource PrimaryDarkText}" />
+                <Label Text="3:12" TextColor="Red" />
+            </HorizontalStackLayout>
+
             <Button
-                Margin="0,16,0,0"
+                Margin="0,12,0,0"
                 BackgroundColor="{StaticResource Secondary}"
-                Command="{Binding SendCodeCommand}"
-                FontSize="20"
-                Text="Sign In"
+                FontSize="18"
+                Text="Verify"
                 TextColor="{StaticResource WhiteText}" />
+            <Button
+                BackgroundColor="Transparent"
+                BorderColor="{StaticResource Secondary}"
+                FontSize="18"
+                Text="Send again"
+                TextColor="{StaticResource Secondary}" />
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
