--- a/View/Auth/PasswordRecoveryPageView.xaml
+++ b/View/Auth/PasswordRecoveryPageView.xaml
@@ -42,7 +42,7 @@
                 BackgroundColor="{StaticResource Secondary}"
                 Command="{Binding SendCodeCommand}"
                 FontSize="20"
-                Text="Sign In"
+                Text="Recover"
                 TextColor="{StaticResource WhiteText}" />
         </VerticalStackLayout>
     </ScrollView>
