--- a/View/Auth/PasswordVerifyCodePageView.xaml
+++ b/View/Auth/PasswordVerifyCodePageView.xaml
@@ -6,7 +6,9 @@
     xmlns:m="clr-namespace:UraniumUI.Icons.MaterialSymbols;assembly=UraniumUI.Icons.MaterialSymbols"
     xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+    xmlns:viewmodel="clr-namespace:MAUIRecipeApp.ViewModel.Auth"
     Title=""
+    x:DataType="viewmodel:PasswordVerifyCodePageViewModel"
     Background="{StaticResource WhiteText}">
     <ScrollView>
         <VerticalStackLayout
@@ -49,6 +51,7 @@
             <Button
                 Margin="0,12,0,0"
                 BackgroundColor="{StaticResource Secondary}"
+                Command="{Binding VerifyCodeCommand}"
                 FontSize="18"
                 Text="Verify"
                 TextColor="{StaticResource WhiteText}" />
