--- a/View/Auth/SignUpPageView.xaml
+++ b/View/Auth/SignUpPageView.xaml
@@ -89,6 +89,7 @@
             <Button
                 Margin="0,16,0,0"
                 BackgroundColor="{StaticResource Secondary}"
+                Command="{Binding SignUpCommand}"
                 FontSize="18"
                 Text="Sign Up"
                 TextColor="{StaticResource WhiteText}" />
