--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -14,6 +14,7 @@
     <ShellContent ContentTemplate="{DataTemplate Auth:LoginPageView}" Route="login" />
     <ShellContent ContentTemplate="{DataTemplate Auth:SignUpPageView}" Route="signup" />
     <ShellContent ContentTemplate="{DataTemplate Auth:PasswordRecoveryPageView}" Route="forgotpass" />
+    <ShellContent ContentTemplate="{DataTemplate Auth:PasswordVerifyCodePageView}" Route="passwordcode" />
     <ShellContent ContentTemplate="{DataTemplate Auth:VerifyCodePageView}" Route="verifycode" />
     <ShellContent ContentTemplate="{DataTemplate Auth:NewPasswordPageView}" Route="newpassword" />
     <ShellContent ContentTemplate="{DataTemplate UserView:HomePageView}" Route="home" />
