--- a/View/Auth/NewPasswordPageView.xaml
+++ b/View/Auth/NewPasswordPageView.xaml
@@ -6,7 +6,9 @@
     xmlns:m="clr-namespace:UraniumUI.Icons.MaterialSymbols;assembly=UraniumUI.Icons.MaterialSymbols"
     xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+    xmlns:viewmodel="clr-namespace:MAUIRecipeApp.ViewModel.Auth"
     Title=""
+    x:DataType="viewmodel:NewPasswordPageViewModel"
     Background="{StaticResource WhiteText}">
     <ScrollView>
         <VerticalStackLayout
@@ -92,6 +94,7 @@
             <Button
                 Margin="0,16,0,0"
                 BackgroundColor="{StaticResource Secondary}"
+                Command="{Binding ChangePasswordCommand}"
                 FontSize="18"
                 Text="Done"
                 TextColor="{StaticResource WhiteText}" />
