--- a/View/UserView/HomePageView.xaml
+++ b/View/UserView/HomePageView.xaml
@@ -6,7 +6,9 @@
     xmlns:m="clr-namespace:UraniumUI.Icons.MaterialSymbols;assembly=UraniumUI.Icons.MaterialSymbols"
     xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+    xmlns:viewmodel="clr-namespace:MAUIRecipeApp.ViewModel.UserView"
     Title=""
+    x:DataType="viewmodel:HomePageViewModel"
     Background="{StaticResource WhiteText}">
     <ScrollView>
         <VerticalStackLayout
@@ -138,11 +140,7 @@
                 </Grid>
 
 
-                <FlexLayout
-                    FlowDirection="LeftToRight"
-                    HorizontalOptions="CenterAndExpand"
-                    JustifyContent="SpaceBetween"
-                    Wrap="Wrap">
+                <FlexLayout JustifyContent="SpaceBetween" Wrap="Wrap">
 
                     <FlexLayout.Resources>
                         <Style TargetType="Button">
@@ -154,7 +152,10 @@
                         </Style>
                     </FlexLayout.Resources>
 
-                    <Button BackgroundColor="Transparent" BorderColor="{StaticResource Primary}" />
+                    <Button
+                        BackgroundColor="Transparent"
+                        BorderColor="{StaticResource Primary}"
+                        Command="{Binding FoodDetailCommand}" />
                     <Button BackgroundColor="Transparent" BorderColor="{StaticResource Primary}" />
                     <Button BackgroundColor="Transparent" BorderColor="{StaticResource Primary}" />
                     <Button BackgroundColor="Transparent" BorderColor="{StaticResource Primary}" />
