--- a/View/UserView/HomePageView.xaml
+++ b/View/UserView/HomePageView.xaml
@@ -150,7 +150,7 @@
                                     Command="{Binding Path=FoodDetailCommand, Source={RelativeSource AncestorType={x:Type viewmodel:HomePageViewModel}}}"
                                     CommandParameter="{Binding Frid}"
                                     CornerRadius="20"
-                                    Source="https://superfoods.vn/wp-content/uploads/2023/07/banh-mi-hamburger-truyen-thong.jpeg" />
+                                    Source="{Binding ImgUrl}" />
 
                                 <!--<Border Stroke="Transparent" StrokeShape="RoundRectangle 15">
                                     <Image
@@ -165,7 +165,7 @@
                                     Margin="8,8,0,0"
                                     Spacing="8">
                                     <Label
-                                        FontSize="20"
+                                        FontSize="18"
                                         Text="{Binding RecipeName}"
                                         TextColor="{StaticResource PrimaryDarkText}" />
                                     <HorizontalStackLayout Spacing="8">
